# net-tools

./: README.md
net-auto/: Dockerfile  README.md  README_CN.md  backup.py  cli.py  devices.json  pingmon.py  pyproject.toml  scanner.py  setup.py  subnet.py
net-auto/.github/workflows/: ci.yml
net-auto/tests/: test_cli.py
net-diag-demo/: README.md  README_CN.md  app.py
net-diag-demo/templates/: index.html
net-diag-html/: README.md  README_CN.md  index.html  manifest.json  sw.js
