[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "net-auto"
version = "1.0.0"
description = "Network Automation Toolkit — config backup, ping monitor, subnet calculator, port scanner"
authors = [{name = "Wang Jiong", email = "2281516753@qq.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "paramiko>=3.0",
    "colorama>=0.4",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://github.com/2281516753/net-auto"

[project.scripts]
net-auto = "cli:main"
